--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,13 @@
 {
-    "name": "laravel/laravel",
-    "description": "The Laravel Framework.",
-    "keywords": ["framework", "laravel"],
+    "name": "forwarddevs/pcuaalite",
+    "description": "Automatic UPC for SAMP.",
+    "keywords": ["PCU", "SAMP", "Laravel", "UPC", "Automatic", "Automatico"],
+    "authors": [
+        {
+            "name": "Forward Devs",
+            "email": "ceoforwarddevs@gmail.com"
+        }
+    ],
     "license": "MIT",
     "type": "project",
     "require": {
@@ -53,6 +59,9 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate"
+        ],
+        "post-create-project-link": [
+            "@php artisan storage:link"
         ],
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
