--- a/composer.json
+++ b/composer.json
@@ -58,9 +58,7 @@
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
         ],
         "post-create-project-cmd": [
-            "@php artisan key:generate"
-        ],
-        "post-create-project-link": [
+            "@php artisan key:generate",
             "@php artisan storage:link"
         ],
         "post-autoload-dump": [
