--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
-    "name": "laravel/laravel",
-    "description": "The Laravel Framework.",
-    "keywords": ["framework", "laravel"],
+    "name": "forwarddevs/pcuaalite",
+    "description": "Automatic UPC for SAMP.",
+    "keywords": ["pcuaalite", "laravel", "pcu", "samp"],
     "license": "MIT",
     "type": "project",
     "require": {
