--- a/composer.json
+++ b/composer.json
@@ -7,10 +7,11 @@
     "require": {
         "php": ">=7.0.0",
         "5dmatweb/streamlab": "dev-master",
+        "codedge/laravel-selfupdater": "^1.4",
+        "doctrine/dbal": "^2.5",
         "edvinaskrucas/notification": "5.*",
         "fideloper/proxy": "~3.3",
         "larapack/config-writer": "1.*",
-        "doctrine/dbal": "^2.5",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
         "mcamara/laravel-localization": "^1.2",
